--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,12 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.6
+  dots_indicator: ^3.0.0
   flutter:
     sdk: flutter
   get: ^4.6.6
 
 dev_dependencies:
-
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
