--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   dots_indicator: ^3.0.0
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^10.7.0
   get: ^4.6.6
 
 dev_dependencies:
