--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,13 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.6
   dots_indicator: ^3.0.0
+  firebase_auth: ^4.19.0
   flutter:
     sdk: flutter
+  flutter_facebook_auth: ^6.2.0
   font_awesome_flutter: ^10.7.0
   get: ^4.6.6
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
