--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.6
+  dartz: ^0.10.1
   dots_indicator: ^3.0.0
   firebase_auth: ^4.19.0
   flutter:
